--- a/TrinityCreator/packages.config
+++ b/TrinityCreator/packages.config
@@ -3,6 +3,6 @@
   <package id="cef.redist.x64" version="3.2623.1396" targetFramework="net45" />
   <package id="cef.redist.x86" version="3.2623.1396" targetFramework="net45" />
   <package id="CefSharp.Common" version="49.0.0" targetFramework="net45" />
-  <package id="CefSharp.Wpf" version="49.0.0" targetFramework="net45" />
+  <package id="CefSharp.WinForms" version="49.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
 </packages>
