--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AI.cs" />
     <Compile Include="BitmaskStackPanel.cs" />
     <Compile Include="Browser.xaml.cs">
       <DependentUpon>Browser.xaml</DependentUpon>
@@ -101,6 +102,16 @@
     <Compile Include="Converters\ValueToVisibilityConverter.cs" />
     <Compile Include="Converters\WeaponSpeedToStringConverter.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="CreatureCreatorPage.xaml.cs">
+      <DependentUpon>CreatureCreatorPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CreatureFamily.cs" />
+    <Compile Include="CreatureTemplatePage.xaml.cs">
+      <DependentUpon>CreatureTemplatePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CreatureTemplates\ExampleTemplate.cs" />
+    <Compile Include="CreatureTemplates\TemplateBase.cs" />
+    <Compile Include="CreatureType.cs" />
     <Compile Include="Database\DataType.cs" />
     <Compile Include="Emulator\cmangosZero.cs" />
     <Compile Include="Emulator\EmulatorHandler.cs" />
@@ -110,6 +121,8 @@
     <Compile Include="ModelViewerPage.xaml.cs">
       <DependentUpon>ModelViewerPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MovementType.cs" />
+    <Compile Include="TrainerData.cs" />
     <Compile Include="UnitClass.cs" />
     <Compile Include="CreditsWindow.xaml.cs">
       <DependentUpon>CreditsWindow.xaml</DependentUpon>
@@ -172,6 +185,14 @@
     <Compile Include="TrinityQuest.cs" />
     <Compile Include="Updater.cs" />
     <Page Include="Browser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreatureCreatorPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CreatureTemplatePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
