Work on Lookup Tool
- Lookup buttons for creature
- Emote lookup added
- Lookup tool now larger by default
- Scrolling on lookuptool now works correctly
- Remember lookuptool width

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -29,6 +29,9 @@
       <setting name="DbcDir" serializeAs="String">
         <value />
       </setting>
+      <setting name="lookupToolWidth" serializeAs="String">
+        <value>400</value>
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   <system.data>
