--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -88,7 +88,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AI.cs" />
     <Compile Include="BitmaskStackPanel.cs" />
     <Compile Include="Browser.xaml.cs">
       <DependentUpon>Browser.xaml</DependentUpon>
@@ -125,7 +124,7 @@
     <Compile Include="CreatureTemplates\ExampleTemplate.cs" />
     <Compile Include="CreatureTemplates\TemplateBase.cs" />
     <Compile Include="CreatureTemplates\TemplateHandler.cs" />
-    <Compile Include="CreatureType.cs" />
+    <Compile Include="DamageType.cs" />
     <Compile Include="Database\DataType.cs" />
     <Compile Include="Emulator\cmangosZero.cs" />
     <Compile Include="Emulator\EmulatorHandler.cs" />
@@ -141,16 +140,12 @@
     <Compile Include="ModelViewerPage.xaml.cs">
       <DependentUpon>ModelViewerPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MovementType.cs" />
     <Compile Include="TrainerData.cs" />
-    <Compile Include="UnitClass.cs" />
     <Compile Include="CreditsWindow.xaml.cs">
       <DependentUpon>CreditsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Currency.cs" />
     <Compile Include="Damage.cs" />
-    <Compile Include="CreatureRank.cs" />
-    <Compile Include="DamageType.cs" />
     <Compile Include="Database\Connection.cs" />
     <Compile Include="Database\DbConfigWindow.xaml.cs">
       <DependentUpon>DbConfigWindow.xaml</DependentUpon>
@@ -183,14 +178,11 @@
     <Compile Include="QuestPage.xaml.cs">
       <DependentUpon>QuestPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="QuestInfo.cs" />
     <Compile Include="QuestPreview.xaml.cs">
       <DependentUpon>QuestPreview.xaml</DependentUpon>
     </Compile>
-    <Compile Include="QuestXp.cs" />
     <Compile Include="TrinityCreature.cs" />
     <Compile Include="TrinityItem.cs" />
-    <Compile Include="ItemBonding.cs" />
     <Compile Include="ItemClass.cs" />
     <Compile Include="ItemInventoryType.cs" />
     <Compile Include="ItemPage.xaml.cs">
@@ -200,13 +192,12 @@
     <Compile Include="ItemSubClass.cs" />
     <Compile Include="ItemMaterial.cs" />
     <Compile Include="Socket.cs" />
-    <Compile Include="SocketBonus.cs" />
-    <Compile Include="Stat.cs" />
     <Compile Include="TrinityQuest.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="VendorPage.xaml.cs">
       <DependentUpon>VendorPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="XmlKeyValue.cs" />
     <Page Include="Browser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -390,6 +381,7 @@
   <ItemGroup>
     <Content Include="Emulator\Reference\cmangos_zero.sql.txt" />
     <Content Include="Emulator\Reference\trinity335a.sql.txt" />
+    <None Include="Resources\cb_data.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x64.3.2623.1396\build\cef.redist.x64.targets" Condition="Exists('..\packages\cef.redist.x64.3.2623.1396\build\cef.redist.x64.targets')" />
