--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Emulator\cmangosZero.cs" />
     <Compile Include="Emulator\EmulatorHandler.cs" />
     <Compile Include="Emulator\IEmulator.cs" />
+    <Compile Include="Emulator\LightsDawn.cs" />
     <Compile Include="Emulator\Trinity335a.cs" />
     <Compile Include="ExportQuery.cs" />
     <Compile Include="LootPage.xaml.cs">
@@ -381,7 +382,9 @@
   <ItemGroup>
     <Content Include="Emulator\Reference\cmangos_zero.sql.txt" />
     <Content Include="Emulator\Reference\trinity335a.sql.txt" />
-    <None Include="Resources\cb_data.xml" />
+    <None Include="Resources\cb_data.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x64.3.2623.1396\build\cef.redist.x64.targets" Condition="Exists('..\packages\cef.redist.x64.3.2623.1396\build\cef.redist.x64.targets')" />
