Update README, revert version bump
- Updated Readme with instructions
- Revert version bump
- Added seperate emulator Trinity 3.3.5a 2019 (not functional yet)

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -133,7 +133,8 @@
     <Compile Include="Emulator\EmulatorHandler.cs" />
     <Compile Include="Emulator\IEmulator.cs" />
     <Compile Include="Emulator\Azeroth335a.cs" />
-    <Compile Include="Emulator\Trinity335a.cs" />
+    <Compile Include="Emulator\Trinity335a201901.cs" />
+    <Compile Include="Emulator\Trinity335aTDB64.cs" />
     <Compile Include="ExportQuery.cs" />
     <Compile Include="LootPage.xaml.cs">
       <DependentUpon>LootPage.xaml</DependentUpon>
