--- a/TrinityCreator/packages.config
+++ b/TrinityCreator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autoupdater.NET.Official" version="1.5.8" targetFramework="net452" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
   <package id="cef.redist.x64" version="75.1.14" targetFramework="net452" />
   <package id="cef.redist.x86" version="75.1.14" targetFramework="net452" />
