--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -430,7 +430,7 @@
   <Import Project="..\packages\CefSharp.WinForms.75.1.143\build\CefSharp.WinForms.targets" Condition="Exists('..\packages\CefSharp.WinForms.75.1.143\build\CefSharp.WinForms.targets')" />
   <PropertyGroup>
     <PostBuildEvent>cd "$(TargetDir)"
-powershell.exe -ExecutionPolicy Unrestricted -f "..\..\ReleaseToZip.ps1"</PostBuildEvent>
+if $(ConfigurationName) == Release powershell.exe -ExecutionPolicy Unrestricted -f "..\..\ReleaseToZip.ps1"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
