Export.cs added
Will be used to generate SQL queries based on Profile instead of the current emulator profiles.
- ;

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -167,6 +167,7 @@
     <Compile Include="ModelViewerPage.xaml.cs">
       <DependentUpon>ModelViewerPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Profiles\Export.cs" />
     <Compile Include="Profiles\Profile.cs" />
     <Compile Include="TrainerData.cs" />
     <Compile Include="CreditsWindow.xaml.cs">
