--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -158,6 +158,8 @@
     <Compile Include="Emulator\Trinity335a201901.cs" />
     <Compile Include="Emulator\Trinity335aTDB64.cs" />
     <Compile Include="ExportQuery.cs" />
+    <Compile Include="GHelper.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="LootPage.xaml.cs">
       <DependentUpon>LootPage.xaml</DependentUpon>
     </Compile>
