Save selected profile between sessions
- Prompt for profile select at startup on first run or broken profile file. Also useful to force select a valid profile to avoid lots of error catching.
- Profile.gtk() is now static  to shorten Export and since we only ever work on active profile anyway

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -28,6 +28,9 @@
       <setting name="lookupToolWidth" serializeAs="String">
         <value>400</value>
       </setting>
+      <setting name="ActiveProfilePath" serializeAs="String">
+        <value />
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   
