Export Loot (tested & working)
- ExportQuery renamed to Query (to avoid confusion with Profiles.Export)
- Error handling now happes in Query
- Confirmed that profile system works
- Add ; to end of each SQL query
- Fixed issue where Loot.Entry exports as string, manually parsing as int due to unusualway LootPage is written.
- Implement questionable error catching when generating query

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -158,7 +158,7 @@
     <Compile Include="Emulator\cMangos335a.cs" />
     <Compile Include="Emulator\Trinity335a201901.cs" />
     <Compile Include="Emulator\Trinity335aTDB64.cs" />
-    <Compile Include="ExportQuery.cs" />
+    <Compile Include="Query.cs" />
     <Compile Include="GHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="LootPage.xaml.cs">
