--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Emulator\cMangos335a.cs" />
     <Compile Include="Emulator\Trinity335a201901.cs" />
     <Compile Include="Emulator\Trinity335aTDB64.cs" />
+    <Compile Include="Profiles\ExpKvp.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="GHelper.cs" />
     <Compile Include="Logger.cs" />
