--- a/TrinityCreator/packages.config
+++ b/TrinityCreator/packages.config
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autoupdater.NET.Official" version="1.5.8" targetFramework="net452" />
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="cef.redist.x64" version="75.1.14" targetFramework="net452" />
   <package id="cef.redist.x86" version="75.1.14" targetFramework="net452" />
-  <package id="CefSharp.Common" version="75.1.143" targetFramework="net452" />
-  <package id="CefSharp.WinForms" version="75.1.143" targetFramework="net452" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.18" targetFramework="net452" />
+  <package id="CefSharp.Common" version="75.1.143" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="75.1.143" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.11.2" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.19" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
 </packages>
