#81 Multiple Issues with Item Creator
- Added Sheath & Material column profile support
- "Never show again" option on WeaponExportWindow
- Crash on create new item button fixed (null check)

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -28,6 +28,9 @@
       <setting name="ActiveProfilePath" serializeAs="String">
         <value />
       </setting>
+      <setting name="disableWeaponCreationNotice" serializeAs="String">
+        <value>False</value>
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   
