--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Tools\VendorCreator\VendorEntryControl.xaml.cs">
       <DependentUpon>VendorEntryControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Converters\BoolInverter.cs" />
     <Compile Include="UI\UIElements\BitmaskStackPanel.cs" />
     <Compile Include="UI\UIElements\Browser.xaml.cs">
       <DependentUpon>Browser.xaml</DependentUpon>
