Improve exception handling
- #120 More details on why "column not found" occurs for users (wrong profile)
- Only one msgbox on failed queries
- Exception class that can be expanded upon
- Query classes now return (Data, SuccessBool) tuple instead of just data

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -94,6 +94,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Data\CExceptions.cs" />
     <Compile Include="Helpers\ProfileHelper.cs" />
     <Compile Include="Tools\ItemCreator\WeaponExportWindow.xaml.cs">
       <DependentUpon>WeaponExportWindow.xaml</DependentUpon>
