--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -439,22 +439,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official">
-      <Version>1.5.8</Version>
+      <Version>1.7.0</Version>
     </PackageReference>
     <PackageReference Include="BouncyCastle">
-      <Version>1.8.5</Version>
+      <Version>1.8.9</Version>
     </PackageReference>
     <PackageReference Include="Google.Protobuf">
-      <Version>3.11.2</Version>
+      <Version>3.19.1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls.WebView">
-      <Version>6.0.0</Version>
+    <PackageReference Include="Microsoft.Web.WebView2">
+      <Version>1.0.1020.30</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>8.0.19</Version>
+      <Version>8.0.27</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
+      <Version>13.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
