CustomDisplayFields: Add support for vendor
- Rework how custom fields are stored. In the ICreator rather than the profile
- Added ICreator for creators which support custom display fields

--- a/TrinityCreator.Shared/TrinityCreator.Shared.csproj
+++ b/TrinityCreator.Shared/TrinityCreator.Shared.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Data\CustomDisplayField.cs" />
     <Compile Include="Data\Damage.cs" />
     <Compile Include="Data\DamageType.cs" />
+    <Compile Include="Data\ICreator.cs" />
     <Compile Include="Data\IKeyValue.cs" />
     <Compile Include="Data\ItemClass.cs" />
     <Compile Include="Data\ItemInventoryType.cs" />
